--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         xcode-version: latest-stable
     - uses: actions/checkout@v3
     - name: Unit Specs
-      uses: sersoft-gmbh/xcodebuild-action
+      uses: sersoft-gmbh/xcodebuild-action@v3.2
       with:
         project: CoreTest.xcodeproj
         scheme: CoreTest
