--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Setup Xcode version
       uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: latest-stable
+        xcode-version: '15.3'
     - uses: actions/checkout@v3
     - name: Unit Specs
       uses: sersoft-gmbh/xcodebuild-action@v3.2
